[package]
name = "zeno"
version = "0.1.0"
edition = "2021"
authors = ["Shahriar Iravanian <siravan@svtsim.com>"]
license = "MIT"
description = "a lightweight just-in-time (JIT) optimizer compiler"
readme = "README.md"
repository = "https://github.com/siravan/symjit"
keywords = ["compiler", "just-in-time compilation", "computer algebra system"]
categories = ["compilers", "hardware-support", "mathematics"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = { version = "0.9", optional = true }
anyhow = "1"
libc = "0.2"
region = "3.0.2"
rayon = "1.1"
spec_math = "0.1.6"
hashbrown = "0.16.0"
num-traits = "0.2"
num-complex = "0.4"
wide = "1.1"
toml= "1.1"
lazy_static = "1.5"

[build-dependencies]
cc = "1.2"

[features]
default = []

[lib]
path = "rust/lib.rs"
crate-type = ["cdylib"]
